--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta name="robots" content="All" />
     <meta name="googlebot" content="All" />
     <meta name="revisit" content="7 days" />
+	<link rel="manifest" href="/manifest.webmanifest">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet"> -->
