--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Conta Comigo APP</title>
-    <meta name="title" content="Conta Comigo APP" />
-    <meta name="description" content="Conta Comigo APP é aplicativo que tem como propósito conectar as pessoas que estão precisando de ajuda devido ao COVID-19 com aqueleas que tem interesse em ajudar." />
-    <meta name="keywords" content="COVID-19, Social Application to help others, Aplicativo de ajuda COVID-19, Colaboration, Colaboração" />
-    <meta name="language" content="pt" />
-    <meta name="robots" content="All" />
-    <meta name="googlebot" content="All" />
-    <meta name="revisit" content="7 days" />
+    <meta name="title" content="Conta Comigo APP"/>
+    <meta name="description"
+          content="Conta Comigo APP é aplicativo que tem como propósito conectar as pessoas que estão precisando de ajuda devido ao COVID-19 com aqueleas que tem interesse em ajudar."/>
+    <meta name="keywords"
+          content="COVID-19, Social Application to help others, Aplicativo de ajuda COVID-19, Colaboration, Colaboração"/>
+    <meta name="language" content="pt"/>
+    <meta name="robots" content="All"/>
+    <meta name="googlebot" content="All"/>
+    <meta name="revisit" content="5 days"/>
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  </head>
-  <body>
-    <noscript>
-      <strong>Desculpas, mas o Aplicativo Conta Comigo não funciona corretamente sem a ativação do JavaScript. Favor habilitar o JavaScript para acessar o Conta Comigo APP.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+</head>
+<body>
+<noscript>
+    <strong>Desculpas, mas o Aplicativo Conta Comigo não funciona corretamente sem a ativação do JavaScript. Favor
+        habilitar o JavaScript para acessar o Conta Comigo APP.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
